# djehuty

./: .gitignore  .mailmap  LICENSE  MANIFEST.in  Makefile.am  README.md  configure.ac  guix.scm.in  pyproject.toml.in
debian/: changelog  control  copyright  manpages  rules
debian/source/: include-binaries
doc/: Makefile.am  api.tex  api.typ  config.typ.in  contact.tex  contact.typ  contributing.tex  contributing.typ  djehuty.sty.in  djehuty.tex  djehuty.typ  introduction.tex  introduction.typ  knowledge-graph.typ  news.typ  running-djehuty.tex  running-djehuty.typ  running-seshat.typ  seshat.1.in  seshat.typ  toc-scroll-helper.js
docker/: Dockerfile  docker-compose.yaml
etc/: seshat.service
etc/djehuty/: djehuty-example-config.xml
etc/seshat/: seshat-example-config.xml
rpmbuild/SPECS/: djehuty.spec.in  seshat.spec.in
src/: Makefile.am
src/djehuty/: config.py.in  ui.py
src/djehuty/utils/: convenience.py  rdf.py
src/djehuty/web/: cache.py  config.py  database.py  s3.py  ui.py  wsgi.py  xml_formatter.py  zipfly.py
src/djehuty/web/resources/html_templates/: categories.html  category.html  dataset.html  institutions.html  layout.html  portal.html  public_metadata.html  search.html
src/djehuty/web/resources/sparql_templates/: prefixes.sparql  transfer_account_resources.sparql
src/seshat/: ui.py
src/seshat/utils/: constants.py  convenience.py  rdf.py
src/seshat/web/: config.py  database.py  formatter.py  locks.py  s3.py  ui.py  validator.py  wsgi.py  xml_formatter.py  zipfly.py
src/seshat/web/resources/: licenses.json
src/seshat/web/resources/html_templates/: author.html  dataset.html  feedback.html  layout.html  portal.html  public_metadata.html
src/seshat/web/resources/sparql_templates/: account_by_email.sparql  account_by_session_token.sparql  account_categories.sparql  account_sessions.sparql  account_storage_used.sparql  account_uuid_by_orcid.sparql  accounts.sparql  (+93 more)
tests/: admin_panel.py  create_article.py  create_collection.py  depositor_panel.py  validators.py
(+46 files in other folders)
